@@ -1,6 +1,6 @@
 @%:@! /bin/sh
 @%:@ Guess values for system-dependent variables and create Makefiles.
-@%:@ Generated by GNU Autoconf 2.61 for photoprint 0.4.0.
+@%:@ Generated by GNU Autoconf 2.61 for photoprint 0.4.0-pre1.
 @%:@
 @%:@ Report bugs to <blackfive@fakenhamweb.co.uk>.
 @%:@ 
@@ -728,8 +728,8 @@ SHELL=${CONFIG_SHELL-/bin/sh}
 # Identity of this package.
 PACKAGE_NAME='photoprint'
 PACKAGE_TARNAME='photoprint'
-PACKAGE_VERSION='0.4.0'
-PACKAGE_STRING='photoprint 0.4.0'
+PACKAGE_VERSION='0.4.0-pre1'
+PACKAGE_STRING='photoprint 0.4.0-pre1'
 PACKAGE_BUGREPORT='blackfive@fakenhamweb.co.uk'
 
 ac_unique_file="util.cpp"
@@ -1442,7 +1442,7 @@ if test "$ac_init_help" = "long"; then
   # Omit some internal or obsolete options to make the list less imposing.
   # This message is too long to be a string in the A/UX 3.1 sh.
   cat <<_ACEOF
-\`configure' configures photoprint 0.4.0 to adapt to many kinds of systems.
+\`configure' configures photoprint 0.4.0-pre1 to adapt to many kinds of systems.
 
 Usage: $0 [OPTION]... [VAR=VALUE]...
 
@@ -1512,7 +1512,7 @@ fi
 
 if test -n "$ac_init_help"; then
   case $ac_init_help in
-     short | recursive ) echo "Configuration of photoprint 0.4.0:";;
+     short | recursive ) echo "Configuration of photoprint 0.4.0-pre1:";;
    esac
   cat <<\_ACEOF
 
@@ -1639,7 +1639,7 @@ fi
 test -n "$ac_init_help" && exit $ac_status
 if $ac_init_version; then
   cat <<\_ACEOF
-photoprint configure 0.4.0
+photoprint configure 0.4.0-pre1
 generated by GNU Autoconf 2.61
 
 Copyright (C) 1992, 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001,
@@ -1653,7 +1653,7 @@ cat >config.log <<_ACEOF
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by photoprint $as_me 0.4.0, which was
+It was created by photoprint $as_me 0.4.0-pre1, which was
 generated by GNU Autoconf 2.61.  Invocation command line was
 
   $ $0 $@
@@ -2347,7 +2347,7 @@ fi
 
 # Define the identity of the package.
  PACKAGE='photoprint'
- VERSION='0.4.0'
+ VERSION='0.4.0-pre1'
 
 
 cat >>confdefs.h <<_ACEOF
@@ -26947,7 +26947,7 @@ exec 6>&1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by photoprint $as_me 0.4.0, which was
+This file was extended by photoprint $as_me 0.4.0-pre1, which was
 generated by GNU Autoconf 2.61.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -27000,7 +27000,7 @@ Report bugs to <bug-autoconf@gnu.org>."
 _ACEOF
 cat >>$CONFIG_STATUS <<_ACEOF
 ac_cs_version="\\
-photoprint config.status 0.4.0
+photoprint config.status 0.4.0-pre1
 configured by $0, generated by GNU Autoconf 2.61,
   with options \\"`echo "$ac_configure_args" | sed 's/^ //; s/[\\""\`\$]/\\\\&/g'`\\"
 
