@@ -288,7 +288,7 @@ exec 6>&1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by photoprint $as_me 0.4.0, which was
+This file was extended by photoprint $as_me 0.4.0-pre1, which was
 generated by GNU Autoconf 2.61.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -333,7 +333,7 @@ $config_commands
 Report bugs to <bug-autoconf@gnu.org>."
 
 ac_cs_version="\
-photoprint config.status 0.4.0
+photoprint config.status 0.4.0-pre1
 configured by ./configure, generated by GNU Autoconf 2.61,
   with options \"\"
 
@@ -516,8 +516,8 @@ s,@SHELL@,|#_!!_#|/bin/bash,g
 s,@PATH_SEPARATOR@,|#_!!_#|:,g
 s,@PACKAGE_NAME@,|#_!!_#|photoprint,g
 s,@PACKAGE_TARNAME@,|#_!!_#|photoprint,g
-s,@PACKAGE_VERSION@,|#_!!_#|0.4.0,g
-s,@PACKAGE_STRING@,|#_!!_#|photoprint 0.4.0,g
+s,@PACKAGE_VERSION@,|#_!!_#|0.4.0-pre1,g
+s,@PACKAGE_STRING@,|#_!!_#|photoprint 0.4.0-pre1,g
 s,@PACKAGE_BUGREPORT@,|#_!!_#|blackfive@|#_!!_#|fakenhamweb.co.uk,g
 s,@exec_prefix@,|#_!!_#|${prefix},g
 s,@prefix@,|#_!!_#|/usr/local,g
@@ -555,7 +555,7 @@ s,@INSTALL_DATA@,|#_!!_#|${INSTALL} -m 644,g
 s,@am__isrc@,|#_!!_#|,g
 s,@CYGPATH_W@,|#_!!_#|echo,g
 s,@PACKAGE@,|#_!!_#|photoprint,g
-s,@VERSION@,|#_!!_#|0.4.0,g
+s,@VERSION@,|#_!!_#|0.4.0-pre1,g
 s,@ACLOCAL@,|#_!!_#|${SHELL} /home/amr/coding/photoprint/scripts/missing --run aclocal-1.10,g
 s,@AUTOCONF@,|#_!!_#|${SHELL} /home/amr/coding/photoprint/scripts/missing --run autoconf,g
 s,@AUTOMAKE@,|#_!!_#|${SHELL} /home/amr/coding/photoprint/scripts/missing --run automake-1.10,g
@@ -915,11 +915,11 @@ b
 s/$/ /
 s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_NAME\)[	 (].*,\1define\2 "photoprint" ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_TARNAME\)[	 (].*,\1define\2 "photoprint" ,
-s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_VERSION\)[	 (].*,\1define\2 "0.4.0" ,
-s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_STRING\)[	 (].*,\1define\2 "photoprint 0.4.0" ,
+s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_VERSION\)[	 (].*,\1define\2 "0.4.0-pre1" ,
+s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_STRING\)[	 (].*,\1define\2 "photoprint 0.4.0-pre1" ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE_BUGREPORT\)[	 (].*,\1define\2 "blackfive@fakenhamweb.co.uk" ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*PACKAGE\)[	 (].*,\1define\2 "photoprint" ,
-s,^\([	 #]*\)[^	 ]*\([	 ]*VERSION\)[	 (].*,\1define\2 "0.4.0" ,
+s,^\([	 #]*\)[^	 ]*\([	 ]*VERSION\)[	 (].*,\1define\2 "0.4.0-pre1" ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*ENABLE_NLS\)[	 (].*,\1define\2 1 ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*HAVE_GETTEXT\)[	 (].*,\1define\2 1 ,
 s,^\([	 #]*\)[^	 ]*\([	 ]*HAVE_DCGETTEXT\)[	 (].*,\1define\2 1 ,
