@@ -1,7 +1,7 @@
 #! /bin/bash
 
 # libtoolT - Provide generalized library-building support services.
-# Generated automatically by  (GNU photoprint 0.4.0)
+# Generated automatically by  (GNU photoprint 0.4.0-pre1)
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
 # Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
